[package]
name = "hieroglyphic"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.4"
serde = "1.0.210"
serde_json = "1.0.128"
shuttle-axum = "0.47.0"
shuttle-runtime = "0.47.0"
shuttle-shared-db = { version = "0.47.0", features = ["postgres", "sqlx"] }
sqlx = "0.7.4"
tokio = "1.28.2"
tracing = "0.1.40"
# TODO: this is an old version of the classifier used by Hieroglyphic,
# migrate to the newer one if the two diverge
detexify = { git = "https://github.com/FineFindus/detexify-rust.git", rev = "311002feb0519f483ef1f9cc8206648286128ff5" }
